joi intergration
