# public/swagger.json
@@ -18,13 +18,81 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"StatusCode": {
+				"enum": [
+					100,
+					101,
+					102,
+					103,
+					200,
+					201,
+					202,
+					203,
+					204,
+					205,
+					206,
+					207,
+					208,
+					226,
+					300,
+					301,
+					302,
+					303,
+					304,
+					305,
+					306,
+					307,
+					308,
+					400,
+					401,
+					402,
+					403,
+					404,
+					405,
+					406,
+					407,
+					408,
+					409,
+					410,
+					411,
+					412,
+					413,
+					414,
+					415,
+					416,
+					417,
+					418,
+					421,
+					422,
+					423,
+					424,
+					425,
+					426,
+					428,
+					429,
+					431,
+					451,
+					500,
+					501,
+					502,
+					503,
+					504,
+					505,
+					506,
+					507,
+					508,
+					510,
+					511
+				],
+				"type": "number"
+			},
 			"APIResponse_string_": {
 				"properties": {
 					"message": {
 						"type": "string"
 					},
-					"description": {
-						"type": "string"
+					"code": {
+						"$ref": "#/components/schemas/StatusCode"
 					},
 					"data": {
 						"type": "string"
@@ -32,6 +100,25 @@
 				},
 				"required": [
 					"message",
+					"code",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"APIResponse_any_": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"code": {
+						"$ref": "#/components/schemas/StatusCode"
+					},
+					"data": {}
+				},
+				"required": [
+					"message",
+					"code",
 					"data"
 				],
 				"type": "object",
@@ -77,8 +164,8 @@
 					"message": {
 						"type": "string"
 					},
-					"description": {
-						"type": "string"
+					"code": {
+						"$ref": "#/components/schemas/StatusCode"
 					},
 					"data": {
 						"$ref": "#/components/schemas/User"
@@ -86,6 +173,7 @@
 				},
 				"required": [
 					"message",
+					"code",
 					"data"
 				],
 				"type": "object",
@@ -224,6 +312,25 @@
 						]
 					}
 				],
+				"parameters": []
+			}
+		},
+		"/ping/pong": {
+			"get": {
+				"operationId": "ValidateJOI",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIResponse_any_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
 				"parameters": []
 			}
 		},
